wordpress/2017/wp-content/themes/oom-pod/style.css
/*
Theme Name: POD Theme
Author: Innouveau
Author URI: https://www.innouveau.com
Description: custom template for OOM
Version: 1.0
License: exclusief gebruik voor OOM

*/

html {
    font-size: 100%;
    height: 100%;
    width: 100%;
}

body {
    padding: 0;
    margin: 0;
    width: 100%;
    font-family: "Frutiger";
    font-size: 16px;
    line-height: 1.625;
    background: #fff;
}

* {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}



/* architecture */

.pagewrap {
    width: 1200px;
    margin: 0 auto;
}

.grid-row {
    font-size: 0;
}

.grid-col {
    display: inline-block;
    font-size: 16px;
    line-height: 1.6;
    vertical-align: top;
}

.grid-50 {
    width: 50%;
}

.grid-left {
    padding-right: 10px;
}

.grid-right {
    padding-left: 10px;
}

#page-body {
}

.background-pattern {
    background-color: #FFD150;
    background-image: url(img/patterns/pod-pattern-03.png);
}



/* top bar */

#top-bar {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    z-index: 1000;
    padding-top: 10px;
    height: 60px;
    background: transparent;
    transition: all 0.5s ease;
}

#top-bar.scrolled {
    background: rgba(0,0,0,0.8);
}

body.home #top-bar.scrolled {
    background: rgba(255,255,255,0.8);
}

#top-bar-mini-logo {
    display: none;
}

#top-logos {
    vertical-align: top;
}

#top-logos a {
    float: left;
    margin-right: 16px;
}

a.svglogo {
    text-decoration: none;
}

a.svglogo svg {
    display: inline-block;
}

a.svglogo svg rect,
a.svglogo svg path,
a.svglogo svg polygon {
    fill: #fff;
}

a.svglogo:hover svg rect,
a.svglogo:hover svg path,
a.svglogo:hover svg polygon {
    fill: #FFD150;
}

body.home a.svglogo svg rect,
body.home a.svglogo svg path,
body.home a.svglogo svg polygon {
    fill: #000;
}



/* page top */

#page-top {
    min-height: 700px;
    position: relative;
    overflow: hidden;
}

#page-top-image {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
    background-size: cover;
    background-position: 50% 50%;
}


#page-top-content {
    position: absolute;
    left: 0;
    top: 160px;
    width: 100%;
    height: 100%;
    z-index: 1;
}

#pod-identity-container {
    height: 395px;
}



/* menu */

#hamburger {
    width: 26px;
    cursor: pointer;
    margin-top: 10px;
    display: inline-block;
    position: relative;
}

.burger {
    height: 4px;
    background: #fff;
    margin-bottom: 5px;
}

#hamburger:hover .burger {
    background: #FFD150;
}

body.home .burger {
    background: #000;
}

#hamburger-content {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-image: url(img/patterns/pod-pattern-full-white.svg);
    background-color: #000;
    background-position: 50% 50%;
    background-size: cover;
    display: none;
}

.menu-active #hamburger-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

body.menu-active {
    overflow: hidden;
}

#hamburger-content ul {
    padding: 0;
    margin: 0;
    list-style: none;
    width: 100%;
}

#hamburger-content li a {
    display: block;
    padding: 10px;
    text-decoration: none;
    color: #fff;
    font-size: 0;
    width: 100%;
}

#hamburger-content li a span {
    display: inline-block;
    font-size: 36px;
    line-height: 1.6;
    font-weight: 700;
    width: 50%;
}

#hamburger-content li a .menu-date {
    color: #FFD150;
    text-align: right;
    padding-right: 8px;
}

#hamburger-content li a .menu-location {
    color: #fff;
    padding-left: 8px;
}

#hamburger-content li.current-menu-item a {
    cursor: default;
}

#hamburger-close {
    position: absolute;
    bottom: 40px;
    right: 40px;
}


/* button */

button, .button {
    height: 40px;
    padding: 12px 24px;
    cursor: pointer;
    font-size: 18px;
    line-height: 14px;
    font-weight: 900;
    border: 0;
    text-decoration: none;
    display: inline-block;
    vertical-align: middle;
}

.button {
    box-sizing: border-box;
    padding-top: 15px;
}

button.yellow {
    background: #FFD150;
    color: #fff;
}

.button.white {
    background: #fff;
    color: #000;
}

.button:hover, button:hover {
    background: #000;
    color: #fff;
}



/* home */

#home-head {
    height: 700px;
    background-image: url('img/patterns/triangle-pattern.svg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 0;
    padding-top: 220px;
}

#home-intro {
    font-size: 20px;
    line-height: 1.9;
    font-weight: 700;
    max-width: 380px;
    padding-top: 80px;
}

#home-meeting-container {
    padding: 60px 0;
    font-size: 0;
}

.home-meeting {
    display: inline-block;
    vertical-align: top;
    width: calc((100% - 40px) / 3);
    height: 220px;
    cursor: pointer;
    text-decoration: none;
    margin-right: 20px;
    margin-bottom: 60px;
}

.home-meeting:nth-child(3n) {
    margin-right: 0;
}

.home-meeting-img {
    height: 180px;
    position: relative;
    background-size: cover;
    background-position: 50% 50%;
}

.home-meeting-title {
    position: absolute;
    left: 8px;
    bottom: 8px;
    z-index: 1;
    line-height: 1.1;
}

.home-meeting-title h5 {
    font-weight: 900;
    color: #FFD150;
    font-size: 18px;
    margin: 0;
    line-height: 1.1;
}

.home-meeting-title h4 {
    font-weight: 700;
    color: #fff;
    font-size: 33px;
    margin: 0;
}

.home-meeting-footer {
    height: 40px;
    background: #FFD150;
    color: #fff;
    font-size: 18px;
    font-weight: 700;
    padding: 8px;
}

#footer-logos {
    padding-top: 60px;
}



/* gallery */

body .ngg-galleryoverview {
    margin: 40px -10px 0 -10px;
}

body .ngg-gallery-thumbnail {
    border: 1px solid transparent;
    margin-bottom: 10px;
}

body .ngg-gallery-thumbnail:hover {
    border: 1px solid #FFD150;
}

body #fancybox-outer {
    background: #000;
    position: relative;
}

body #fancybox-outer:after {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 10000000;
    width: 460px;
    height: 280px;
    content: '';
    background-image: url(img/identity/pod-logo-lightbox.png);
}

body #fancybox-title {
    background: transparent;
    text-align: left;
    font-size: 16px;
    font-weight: 300;
    color: #fff;
    padding: 0 20px 20px 90px;
    margin: 0!important;
    width: calc(100% + 0) !important;
}

body #fancybox-content {
    border-color: transparent;
}

body #fancybox-content img {
    border: 10px solid transparent;
}

#fancybox-overlay {
    background: rgba(255,255,255,0.8)!important;
    opacity: 1!important;
}

body #fancybox-right {
    right: 20px!important;
}

body #fancybox-left {
    left: 20px!important;
    right: auto!important;
}

body #fancybox-right-ico {
    right: 20px!important;
    left: auto!important;
}

body #fancybox-left-ico {
    left: 20px!important;
}

body .fancy-ico {
    width: 24px!important;
    height: 40px!important;
    background-position: 50% 50%!important;
}

body #fancybox-right-ico.fancy-ico {
    background-image: url(img/lightbox/next.svg)!important;
}

body #fancybox-left-ico.fancy-ico {
    background-image: url(img/lightbox/prev.svg)!important;
}

body #fancybox-close {
    width: 40px!important;
    height: 40px!important;
    right: 32px;
    top: 32px;
    background-image: url(img/lightbox/close.svg)!important;
}


    /* Meeting */


/* meeting header */

#meeting-header {
    color: #fff;
    font-weight: 900;
}

#meeting-header-date {
    text-align: right;
    color: #FFD150;
    font-size: 40px;
    line-height: 1.2;
}

#meeting-header-location {
    font-size: 40px;
    line-height: 1.2;
}

#meeting-header-review {
    color: #FFD150;
    font-size: 40px;
    line-height: 1.2;
}



/* module */

.module-content {
    padding: 35px 0;
    position: relative;
}

.module-absolute {
    position: absolute;
    left: 0;
    top: 24px;
    width: 50%;
}

.module-intro {
    font-size: 32px;
    line-height: 1.1875;
    font-weight: 700;
    max-width: 380px;
}

.module-header {
    border-bottom: 2px solid #C9C6C5;
    padding-top: 16px;
    height: 60px;
}

.module-header-solo {
    border-bottom: 0;
}

.module-header h3 {
    margin: 0;
    font-weight: 900;
    font-size: 18px;
    color: #FFD150;
}


/* program */

.meeting-program-row {
    padding-bottom: 40px;
}

.meeting-program-title,
.meeting-workshop-title {
    font-size: 18px;
    font-weight: 700;
}

.meeting-program-time,
.meeting-workshop-time {
    text-align: right;
    color: #FFD150;
    font-weight: 900;
    font-size: 18px;
}



/* workshop */

#meeting-workshops {
    padding-top: 36px;
    display: none;
}

#hide-button {
    display: none;
}

.meeting-workshop-row {
    padding-bottom: 24px;
}

.meeting-workshop-description {
    border-bottom: 1px solid #000;
    padding-bottom: 12px;
}






/* map */

#meeting-location {
    height: 520px;
    position: relative;
}

#meeting-location-map {
    height: 100%;
    width: 100%;
    position: absolute;
    left: 0;
    top: 0;
    z-index: 0;
    background: grey;
}

#meeting-location-content {
    height: 100%;
    position: absolute;
    left: calc(50% - 600px);
    top: 0;
    z-index: 1;
    display: inline-block;
}

#meeting-location .module-header {
    border-bottom: 0;
}

.plan-route {
    display: inline-block;
    width: 196px;
    height: 40px;
    text-decoration: none;
    background: #fff;
    color: #000;
    position: absolute;
    left: calc(50% - 20px);
    top: 240px;
}

.plan-route:hover {
    background: #000;
    color: #fff;
}

.plan-route-circle {
    float: left;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background: #FFD150;
    margin: 0 18px 0 -20px;
}

.plan-route-text {
    padding-top: 4px;
    font-size: 18px;
    font-weight: 900;
}









@media (max-width: 1200px) {

    .pagewrap {
        width: 100%;
        margin: 0;
        padding: 0 20px;
    }

    #meeting-location-content {
        left: 20px;
    }
}




@media (max-width: 768px) {

    #top-logos {
        display: none;
    }

    #page-top-content {
        top: 80px;
    }

    #meeting-header-date {
        text-align: left;
    }

    .grid-col {
        float: none;
        width: 100%;
        padding-left: 0;
        padding-right: 0;
    }

    .module-absolute {
        position: relative;
        left: 0;
        top: 0;
        width: 100%;
    }

    .module-intro {
        padding-bottom: 40px;
    }

    .meeting-program-time, .meeting-workshop-time {
        text-align: left;
    }
}

